<resources>

    <string name="app_name">Simaye Baradar</string>
    <string name="hello_world">Hello world!</string>
    <string name="Image_Desc">Image Desc</string>
    
    <string name="Str_Name_Family_Email">نام و نام خانوادگی</string>
    <string name="Str_Email_Email">پست الکترونيکی</string>
    <string name="Str_Message_Email">متن پيام</string>
    <string name="Str_Send_Email">ارسال</string>
    <string name="Str_Cancel_Email">انصراف</string>
    <string name="Str_Farsi_App_Name">سيمای برادر</string>
    <string name="Str_Desc_Email">
        شما می توانيد پيشنهادات و انتقادات خود را در مورد برنامه از طريق فرم زير اعلام کنيد
    </string>
    
    <string name="Str_Context_Title">تنظيمات</string>
    <string name="Str_About_Back">بازگشت</string>
    <string name="Str_Desc_Video">توضيحات ويديو</string>
    <string name="Str_Download_Title">در حال دانلود ويديو</string>
    <string name="Str_Name_Download">"نام فايل : "</string>
    <string name="Str_Download_Sixe">"حجم : "</string>
    
    <string name="Str_About_Description">
		این برنامه گزیده‌ای از شرح و بسط حکمت 289 نهج البلاغه می باشد که توسط دکتر محمد‌علی انصاری بیان شده است
		\n\n
		امام بابیان دوازده خصلت به معرفی  انساني دینی پرداخته وصاحب چنین ویژگیهایی را برادر خود نامیده اند،همچنین با ارائه الگو ازهمه ما می خواهند این ارزش ها را درخود محقق سازيم
		\n\n
		با امید به اینکه حب خود را نسبت به حضرتش با عمل ونه صرفا با گفتار نشان دهیم
		\n\n
		با تشکر از این که برنامه را به دیگران معرفی می کنید ودر ترويج اخلاق علوی یاور هستید
    </string>
</resources>